--- a/app/public/wp-content/themes/engress/css/footer.scss
+++ b/app/public/wp-content/themes/engress/css/footer.scss
@@ -1,61 +1,38 @@
 // 資料請求 
 .ly_document {
-  height: 186.4px;
-  padding: 70px 0 0;
   background-image: url('../img/cta.png');
   background-position: center;
   background-size: cover;
-  background-repeat: no-repeat;
   text-align: center;
+  .ly_inner {
+    padding-top: 70px;
+    padding-bottom: 41px;
+  }
 }
 
 .bl_document_title {
+  margin-bottom: 27px;
   color: #FFFFFF;
   font-weight: bold;
   font-size: 32px;
-  line-height: 1em; // TODO: line-heightを共通化したい
+  line-height: 1;
   @media screen and (max-width: 1024px) {
     font-size: 24px;
   }
 }
 
-.bl_document_ctaButton_wrapper {
-  margin: 25px 0 22px;
-}
+.bl_document_button {
+  margin-bottom: 22px;
 
-.bl_document_ctaButton {
-  display: inline-flex;
-  justify-content: center;
-  align-items: center;
-  width: 280px;
-  height: 50px;
-  border: transparent 1px solid;
-  border-radius: 25px;
-  box-sizing: border-box; /* TODO: 必要に応じて共通化 */
-  background-color: #F5A623;
-  color: #FFFFFF;
-  font-weight: bold;
-  font-size: 16px;
-  &:focus, &:hover {
-    border: currentColor 1px solid;
-    background-color: #FFFFFF;
-    color: #F5A623;
+  .el_button {
+    width: 280px;
+    height: 50px;
+    border-radius: 25px;
+    font-size: 1rem;
   }
 }
 
-.bl_document_contactLink_wrapper {
-  
-}
-
-.bl_document_contactLink {
-  color: #FFFFFF;
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 16px;
-  text-decoration: underline;
-  &:hover {
-    opacity: .7;
-  }
+.bl_document_contact {
 }
 
 // フッター
